# codex-foundation

./: .gitignore  FOUNDATION_REPO_MANIFEST.json  README.md  codex-foundation-registry.toml  offline_canaries.py  offline_canary_registry.json  pyproject.toml  skill_audit.py  skill_factory.py  skill_quality_audit.toml  source-origin-inventory.md  vendor_sources.lock.md
.github/: dependabot.yml
codex_improvement/: __init__.py  cli.py  pipeline.py  signals.schema.json
pipeline/: CHANGELOG.control.md  FOUNDATION_MANIFEST.json  README.md
project_plans/: codex-foundation-independent-cicd-20260627.md  codex-pipeline-hotl-20260626.md  codex-pipeline-phase10-subagent-governance-20260626.md  codex-pipeline-phase2-hardening-20260626.md  codex-pipeline-phase3-bridge-contract-20260626.md  codex-pipeline-phase4-github-collection-20260626.md  codex-pipeline-phase5-github-actions-wrappers-20260626.md  codex-pipeline-phase6-preview-artifact-20260626.md  codex-pipeline-phase7-staging-dry-run-20260626.md  codex-pipeline-phase8-production-plan-20260626.md  codex-pipeline-phase9-rollback-dry-run-20260626.md  codex-static-pages-cd-execution-20260626.md  codex-static-pages-cd-long-run-loop-20260627.md
prompt_contracts/: codex_improvement_triage_v1.yaml
scripts/: foundation-rollback-plan.ps1  package-foundation.ps1  verify-foundation.ps1  write-foundation-repo-manifest.py
tests/: test_codex_improvement.py  test_codex_vendor_sources_lock.py  test_context_offload_pointer_map.py  test_foundation_cicd_contract.py  test_offline_canaries.py  test_overimplementation_guard.py  (+5 more)
(+82 files in other folders)
