[project]
name = "codex-foundation"
version = "0.1.0"
description = "Local Codex foundation control plane and HOTL pipeline."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest-cov>=5.0.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "pipeline/engine",
]
testpaths = [
  "tests",
  "pipeline/tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
